# rag-knowledge-base

./: .env.local  .gitignore  pyproject.toml
api/: database.py  main.py
api/generators/: response_generator.py
api/loaders/: data_retriever.py  gcs_loader.py
api/models/: __init__.py  ai_response_generator.py  chat_models.py  user_model.py
api/processors/: __init__.py  document_processor.py  vector_embedder.py
api/routes/: __init__.py  chat_routes.py  file_routes.py
api/schemas/: __init__.py  materials.py  subjects.py  units.py
api/schemas/mongodb/: __init__.py  chunk.py  materials.py  source_document.py  subject.py  unit.py
api/schemas/postgres/: __init__.py  chat_messages.py  chat_sessions.py  users.py
api/storage/: populate_chunks.py  populate_materials.py  populate_subjects.py  populate_units.py
api/storage/mongodb/: populate_chunks.py  populate_source_documents.py
api/storage/postgres/: __init__.py  chat_messages_manager.py  chat_session_manager.py  user_manager.py
api/utils/: __init__.py  authenticate_user.py  create_database.py  get_database.py  get_mongo_database.py  get_pg_database.py  user.json
databases/mongodb/: database.js
frontend/: .copy.env  CHAT_README.md  package-lock.json  package.json
frontend/src/app/: AppLayout.tsx  ThemeProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chat/[slug]/: page.tsx
frontend/src/app/chat/advanced/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/sign-in/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/components/: ChatSidebar.tsx  ThemeProviderWrapper.tsx  ThemeSwitch.tsx  user-profile.tsx
frontend/src/lib/: api.ts
