[project]
name = "rag-knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "clerk-backend-api>=3.2.1",
    "fastapi>=0.116.1",
    "google-cloud-storage>=3.3.0",
    "langchain>=0.3.27",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.9",
    "motor>=3.7.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
