[project]
name = "rag-knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.0",
    "clerk-backend-api>=3.2.1",
    "clerk-sdk>=0.3.0",
    "fastapi>=0.116.1",
    "fastapi-clerk-auth>=0.0.7",
    "google-cloud-storage>=3.3.0",
    "langchain>=0.3.27",
    "langchain-google>=0.1.1",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-mongodb>=0.7.0",
    "langchain-openai>=0.3.32",
    "motor>=3.7.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
]
